refactor(site): component customization page
this hopefully makes action row shenanigans less broken

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -339,6 +339,7 @@
   "linkButton": "Link Button",
   "addComponentType": "Add $t(componentShort.{{type}})",
   "editingComponentFromUser": "Editing a $t(component.{{type}}, lowercase) from",
+  "messageMaxRowsNote": "The maximum number of rows per message is {{count}}.",
   "message": "Message",
   "messageN": "Message {{n}}",
   "messageNText": "Message {{n}} - {{text}}",
