feat(site): spanish translation option

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -73,7 +73,8 @@
     "nl": "Dutch",
     "en-US": "English, US",
     "en-GB": "English, UK",
-    "fr": "French"
+    "fr": "French",
+    "es": "Spanish"
   },
   "webhookUrl": "Webhook URL",
   "invalidWebhookUrl": "Invalid webhook URL. They start with https://discord.com/api/webhooks/...",
