--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -77,6 +77,9 @@
     "es": "Spanish"
   },
   "translatePrompt": "Want to help translate Discohook into your language? Check out <0>the translation portal</0> and join <1>the support server</1> to coordinate with us.",
+  "webhookInput": "Webhook Input",
+  "modern": "Modern",
+  "classic": "Classic",
   "webhookUrl": "Webhook URL",
   "invalidWebhookUrl": "Invalid webhook URL. They start with https://discord.com/api/webhooks/...",
   "createdAtBy": "Created on {{ createdAt, MMM D, YYYY }} by {{username}}",
