chore(site): i18n target add modal

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -80,8 +80,10 @@
   "webhookInput": "Webhook Input",
   "modern": "Modern",
   "classic": "Classic",
+  "chooseServer": "Choose a server",
   "webhookUrl": "Webhook URL",
   "invalidWebhookUrl": "Invalid webhook URL. They start with https://discord.com/api/webhooks/...",
+  "backToServerSelection": "Back to server selection",
   "createdAtBy": "Created on {{ createdAt, MMM D, YYYY }} by {{username}}",
   "someone": "someone",
   "addWebhook": "Add Webhook",
