feat(site): test trigger events

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -298,6 +298,7 @@
     "0": "A member joins the server",
     "1": "A member leaves the server (or is removed)"
   },
+  "sendTestEvent": "Send Test Event",
   "backToTriggers": "Back to Triggers",
   "deleteTrigger": "Delete Trigger",
   "deleteTriggerConfirm": "Are you sure you want to delete $t(triggerEvent.{{0}}) and its flow?",
