fix(site): admin i18n key

--- a/packages/site/app/i18n/ar.json
+++ b/packages/site/app/i18n/ar.json
@@ -586,7 +586,7 @@
     "backToTriggers": "العودة إلى المُشغِْلين",
     "homePermission": {
         "owner": "انت المالك لهذا السيرفر.",
-        "administrator": "انت ادمن.",
+        "admin": "انت ادمن.",
         "roles": "الرول الخاص بك يتيح لك بعض الصلاحيات (بدون تجاوزات التشانلات الخاصة)."
     },
     "deleteTrigger": "مسح المُشغِْل",
