--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -75,7 +75,8 @@
     "en-GB": "English, UK",
     "fr": "French",
     "es": "Spanish",
-    "de": "German"
+    "de": "German",
+    "it": "Italian"
   },
   "translatePrompt": "Want to help translate Discohook into your language? Check out <0>the translation portal</0> and join <1>the support server</1> to coordinate with us.",
   "webhookInput": "Webhook Input",
