--- a/packages/site/app/i18n/ar.json
+++ b/packages/site/app/i18n/ar.json
@@ -475,7 +475,7 @@
     "sendMessageN_many": "ارسال رسالة",
     "sendMessageN_other": "ارسال رسائل",
     "editComponent": "تعديل العنصر",
-    "linkEmbedsPremiumReadOnly": "انت حالياً في وضع القرائة فقط. يمكنك التعديل, لكن إذا اردت حفظ رابط, تحتاج ان تشترك في <0>الاشتراك الفاخر</Link>.",
+    "linkEmbedsPremiumReadOnly": "انت حالياً في وضع القرائة فقط. يمكنك التعديل, لكن إذا اردت حفظ رابط, تحتاج ان تشترك في <0>الاشتراك الفاخر</0>.",
     "linkEmbedsNoVideoAndDescription": "مستخدمين الاندرويد فقط هم من يمكنهم رؤية وصف الفيديو.",
     "linkEmbedsImageLimit": "رسائل الروابط المُضمنة يمكن ان تحتوي على صورة مُصغرة واحدة \"Thumbnail\" او اربعة صور كبيرة, لكن لا يمكن ان تحتوي على الاثنان في نفس الوقت.",
     "linkEmbedsNoVideoAndImage": "رسائل الروابط المُضمنة لا يمكنها ان تحتوي على فيديو و صورة في نفس الوقت. قم بإزالة الفيديو لتستطيع اضافة الصور.",
