--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -159,7 +159,7 @@
   "never": "Never",
   "joinedDiscohook": "Joined Discohook",
   "linkEmbedsPremiumNote": "You've uncovered a Deluxe feature! <0>Read more about link embeds here.</0>",
-  "linkEmbedsPremiumReadOnly": "You're currently in read-only mode. You can play around in the editor, but in order to save a link, you will need to subscribe to <0>Discohook Deluxe</Link>.",
+  "linkEmbedsPremiumReadOnly": "You're currently in read-only mode. You can play around in the editor, but in order to save a link, you will need to subscribe to <0>Discohook Deluxe</0>.",
   "linkEmbedsNoVideoAndDescription": "The description is not visible when a video is set.",
   "linkEmbedsImageLimit": "Link embeds can have one thumbnail or up to 4 large images, but not both.",
   "linkEmbedsNoVideoAndImage": "Link embeds cannot have a video paired with an image. Remove your video in order to add images.",
