feat(site): simplify message editing terminology

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -39,14 +39,19 @@
   "sendMessageN_other": "Send Messages",
   "messages": "Messages",
   "send": "Send",
+  "submit": "Submit",
   "sendToAll": "Send to All",
+  "submitToAll": "Submit to All",
   "sendAll": "Send All",
+  "submitAll": "Submit All",
   "sending": "Sending",
+  "editing": "Editing",
+  "submitting": "Submitting",
   "sendNoWebhooks": "You have no webhooks to send to.",
   "sendNoMessages": "You have no messages to send.",
   "orgRedirectTitle": "You were just redirected from discohook.org",
   "orgRedirectBody": "Discohook is now available at <bold>discohook.app</bold>. To migrate your backups, <importLink>click here</importLink>. To read more about this update, <infoLink>click here</infoLink>.",
-  "willBeEdited": "This message has a reference set, so it will be edited.",
+  "willBeEdited": "This message has its link set, so it will be edited.",
   "skippedEdit": "Skipped edit due to mismatched webhook ID.",
   "submitResultTitle": "Submit Result",
   "success": "Success",
@@ -306,15 +311,14 @@
   "information": "Information",
   "havingTrouble": "Having Trouble?",
   "troubleshootMessage": "If you press the send button and nothing happens, it may be because your browser is blocking connections to Discord, which is not uncommon for privacy-focused extensions like Privacy Badger. Try disabling privacy extensions or entering incognito/private mode.",
-  "setMessageReference": "Set Message Reference",
+  "setMessageLink": "Set Message Link",
   "messageLink": "Message Link",
   "webhook": "Webhook",
   "referenceNoWebhooks": "You haven't added any webhooks that match the message link you provided. To overwrite or edit, you will need to add the correct webhook.",
   "invalidMessageLink": "Invalid message link. They start with https://discord.com/channels/… and have three sets of numbers.",
   "overwriteMessage": "Overwrite Editor",
-  "removeReference": "Remove Reference",
-  "setReference": "Set Reference",
-  "changeReference": "Change Reference",
+  "removeMessageLink": "Remove Message Link",
+  "setLink": "Set Link",
   "add": "Add",
   "addEmbed": "Add Embed",
   "addRow": "Add Row",
