added czech translation

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -76,7 +76,8 @@
     "fr": "French",
     "es": "Spanish",
     "de": "German",
-    "it": "Italian"
+    "it": "Italian",
+    "cs": "Czech"
   },
   "translatePrompt": "Want to help translate Discohook into your language? Check out <0>the translation portal</0> and join <1>the support server</1> to coordinate with us.",
   "webhookInput": "Webhook Input",
