feat(site): backups pagination

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -135,7 +135,9 @@
   "deleteLinkBackup": "Delete Link Embed",
   "deleteLinkBackupConfirm": "Are you sure you want to delete this link embed? This cannot be undone.",
   "backups": "Backups",
-  "noBackups": "You haven't created any backups.",
+  "noBackups": "There are no backups here. You can create a backup on the <0>main page</0> in the \"Backups\" menu.",
+  "previousPage": "Previous Page",
+  "nextPage": "Next Page",
   "openBackupLoad": "Start editing this backup without opening a new tab",
   "openBackupClone": "Clone this backup and load the duplicated data in the current tab",
   "openBackupNewTab": "Open this backup in a new tab",
