feat(site): share links pagination

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -136,8 +136,8 @@
   "deleteLinkBackupConfirm": "Are you sure you want to delete this link embed? This cannot be undone.",
   "backups": "Backups",
   "noBackups": "There are no backups here. You can create a backup on the <0>main page</0> in the \"Backups\" menu.",
-  "previousPage": "Previous Page",
-  "nextPage": "Next Page",
+  "previousPage": "<0/> Previous Page",
+  "nextPage": "Next Page <0/>",
   "openBackupLoad": "Start editing this backup without opening a new tab",
   "openBackupClone": "Clone this backup and load the duplicated data in the current tab",
   "openBackupNewTab": "Open this backup in a new tab",
