feat(site): update september changelog

--- a/packages/site/public/guide-files/changelogs/2024-09.md
+++ b/packages/site/public/guide-files/changelogs/2024-09.md
@@ -4,15 +4,19 @@ title: "September 2024"
 
 ## New
 - Any autocomplete menu that allows you to select a webhook will now also show the channel that the webhook is in
-- The **Webhook Info** message command now has buttons to use the webhook and get its URL, just like **/webhook info**
-- The **/welcomer set** command is back, enabling you to create triggers for members joining & leaving using preset flows
+- The **Webhook Info** message command now has buttons to use the webhook and get its URL, just like </webhook info:1>
+- The </welcomer set:1> command is back, enabling you to create triggers for members joining & leaving using preset flows
   - **channel** and **webhook** - only one of these is required. This sets the destination for the message.
   - **share-link** - Use a share link generated in the **Share** menu on Discohook. (looks like `https://discohook.app/?share=...`)
   - **delete-after** - Optionally delete the message after up to a minute (use 0 to remove this)
-  - **/welcomer view** - Check on a welcomer configuration & edit the message on Discohook
-  - **/welcomer delete** - Delete a welcomer
+  - </welcomer view:1> - Check on a welcomer configuration & edit the message on Discohook
+  - </welcomer delete:1> - Delete a welcomer
 - When selecting a webhook from your server, Discohook will now show you the channel that the webhook is in - especially useful if you have multiple similarly-named webhooks
 - There is now a link to edit the backup selected in send message actions
+- Added navigation buttons to the backups page and share links page so you can see more than 50 backups/100 share links
+- The **Webhook Info** message command, which has a hidden response, now uses a direct link to Discohook for the "Use Webhook" button
+- </webhook create:1> can now be used with media channels
+- You can now click **Force Refresh** on your server's webhooks page to clear old (deleted) webhooks that are showing up in select menus on Discohook
 
 ## Fixed
 - Fixed old link buttons sometimes refusing updates and deletions from within Discord
@@ -20,7 +24,12 @@ title: "September 2024"
 - Fixed server channels and emojis not being loaded after creating a new webhook on the site
 - Fixed confusing (but benign) errors that may have appeared after removing a webhook then attempting to edit a message
 - Fixed behavior of default values when editing a message
+- Fixed format options assuming every user has an animated avatar
+- Fixed webhooks not being removed from site lists after their channel is deleted
+- Fixed inability to remove deleted servers from site lists (log out and back in)
 
 ## Updates
 - Arabic is once again 100% complete (as far as content that is currently translatable) thanks to @mew610
 - A Czech translation is now available courtesy of @playmr365_
+- </triggers add:1> now responds with a hidden message
+- There is now a "Preview" label over the preview while editing a component
