fix(site): color picker awfulness
fixes #30

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -389,6 +389,7 @@
   "iconUrl": "Icon URL",
   "sidebarColor": "Sidebar Color",
   "clickToSet": "Click to Set",
+  "reset": "Reset",
   "provider": "Provider",
   "providerUrl": "Provider URL",
   "body": "Body",
