--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -142,6 +142,7 @@
   "linkEmbeds": "Link Embeds",
   "deleteLinkBackup": "Delete Link Embed",
   "deleteLinkBackupConfirm": "Are you sure you want to delete this link embed? This cannot be undone.",
+  "noLinkBackups": "There's no data here. You can save a link embed in the <0>link embed editor</0>.",
   "backups": "Backups",
   "noBackups": "There are no backups here. You can create a backup on the <0>main page</0> in the \"Backups\" menu.",
   "previousPage": "<0/> Previous Page",
