feat(site): i18n for backup import modal

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -157,6 +157,13 @@
   "import": "Import",
   "importBackups": "Import Backups",
   "importDiscoscheduler": "Import Discoscheduler posts ({{ count }})",
+  "importOrgPrompt": "If you want to import your backups stored on Discohook.org, <0>click here</0>. Otherwise, you can use this menu to import backup files that you have previously exported.",
+  "backupsFile": "Backups File",
+  "badJsonFile": "This is not a properly encoded JSON file.",
+  "failedBackupParse": "Failed to parse the file. Make sure it is a valid, unmodified backup export.",
+  "backupNameDuplicate": "<0/> You already have a backup with this name",
+  "viewBackupName": "View {{name}}",
+  "importCount": "Import {{count}}",
   "export": "Export",
   "exportBackups": "Export Backups",
   "importedFromOrgAt": "Imported from discohook.org on $t(timestamp.date_verbose)",
