feat(site): file paste button, use object urls

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -509,6 +509,9 @@
   "profileImmutable": "Profile info cannot be changed for existing messages.",
   "filesCount": "Files ({{ count }}/10)",
   "addFile": "Add File",
+  "pasteFile": "Paste File",
+  "pasteCmd": "Press \u2318V",
+  "pasteCtrl": "Press Ctrl+V",
   "file": "File",
   "flags": "Flags",
   "flagsOptional": "Flags (optional)",
