chore(site): prepare for selecting thumbnail
blocked by https://github.com/mui/base-ui/issues/1556

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -503,6 +503,7 @@
   "forumImmutable": "Webhooks cannot change the thread name.",
   "noForumWebhooks": "None of your webhooks are in a thread-only channel, so a thread name cannot be set.",
   "threadId": "Thread ID",
+  "postThumbnail": "Post Thumbnail (media channels)",
   "content": "Content",
   "contentOptional": "Content (optional)",
   "avatarUrl": "Avatar URL",
