feat(site): load uk & ru, options

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -82,7 +82,10 @@
     "es": "Spanish",
     "de": "German",
     "it": "Italian",
-    "cs": "Czech"
+    "cs": "Czech",
+    "id": "Indonesian",
+    "uk": "Ukranian",
+    "ru": "Russian"
   },
   "translatePrompt": "Want to help translate Discohook into your language? Check out <0>the translation portal</0> and join <1>the support server</1> to coordinate with us.",
   "webhookInput": "Webhook Input",
