--- a/packages/site/app/i18n/ru.json
+++ b/packages/site/app/i18n/ru.json
@@ -1,4 +1,7 @@
 {
+    "locales": {
+        "ru": "Русский"
+    },
     "edit": "Изменить",
     "search": "Поиск",
     "helpSearchPlaceholder": "Как сделать …",
