--- a/packages/site/app/i18n/uk.json
+++ b/packages/site/app/i18n/uk.json
@@ -1,4 +1,7 @@
 {
+    "locales": {
+        "uk": "українська"
+    },
     "required": "Обов'язково",
     "settings": "Налаштування",
     "help": "Допомога",
