Remove "Today at"
The message timestamp doesn't include the "Today at" prefix anymore

--- a/packages/site/app/i18n/en.json
+++ b/packages/site/app/i18n/en.json
@@ -566,7 +566,7 @@
   "historyRestore": "Restore to this point",
   "historyRemove": "Remove from history",
   "defaultPlaceholder": "Make a selection",
-  "todayAt": "Today at {{ date, h:mm A }}",
+  "todayAt": "{{ date, h:mm }}",
   "badge": {
     "app": "APP",
     "server": "SERVER"
